calproxy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calproxy
spec:
  type: ClusterIP
  selector:
    app: calproxy
  ports:
    - port: 80
      targetPort: 8080
