calproxy/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calproxy
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-prod
  routes:
    - kind: Rule
      match: Host(`*`)
      priority: 1
      services:
        - name: calproxy
          port: 80
